car-commerce.yaml
#namespace
apiVersion: v1
kind: Namespace
metadata:
  name: carcommerce
---
#backend-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: carcommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: acreadeployca.azurecr.io/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: 
            requests: 
              cpu: 100m  
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: carcommerce
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
---
#frontend-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: carcommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: acreadeployca.azurecr.io/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: 
            requests: 
              cpu: 100m  
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: carcommerce
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
---
# sqlserver-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: carcommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      securityContext:
        fsGroup: 10001  # mssql user UID
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: sqlserver-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: carcommerce
spec:
  type: ClusterIP
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
